--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,12 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
@@ -45,7 +51,10 @@
               ],
               "outputHashing": "all"
             },
+            
             "development": {
+              
+              
               "buildOptimizer": false,
               "optimization": false,
               "vendorChunk": true,
